IFS-2945 Modal link instead of post

--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/detail.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/detail.html
@@ -82,12 +82,12 @@
             </tr>
         </tbody>
     </table>
-    <th:block>
-        <div th:if="${user.isAdmin()} == false">
-        <a data-js-modal="modal-withdraw-project">Withdraw project</a>
+    <!--<th:block>-->
+        <!--<div th:if="${user.isAdmin()} == false">-->
+        <a data-js-modal="modal-withdraw-project" class="buttonlink extra-margin">Withdraw project</a>
             <th:block th:insert="fragments/modals :: modal-withdraw-project" />
-        </div>
-    </th:block>
+        <!--</div>-->
+    <!--</th:block>-->
 
     <th:block th:insert="fragments/layout :: main-content-end" />
 </main>
