--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/fragments/modals.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/fragments/modals.html
@@ -586,12 +586,13 @@
         <p>The project will be marked as withdrawn and removed from project setup. You can still view the application in
             previous competitions</p>
         <hr />
-            <form th:action="@{~/management/competition/${competitionId}/applications/unsuccessful'}" method="post">
-                <div>
-                    <button class="button" name="approved" value="true">Withdraw project</button>
-                    <button type="button" class="js-close buttonlink">Cancel</button>
-                </div>
-            </form>
+        <!--<form th:action="@{~/management/competition/{competitionId}/applications/unsuccessful(competitionId=${model.competitionId})}" method="post">-->
+            <div>
+                <a class="button" th:href="@{~/management/competition/{competitionId}/applications/unsuccessful(competitionId=${model.competitionId})}">Withdraw project</a>
+                <!--<button class="button" name="approved" value="true">Withdraw project</button>-->
+                <button type="button" class="js-close buttonlink">Cancel</button>
+            </div>
+        <!--</form>-->
     </div>
 </th:block>
 </html>
