IFS-2782 content fixes.

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview/application-find.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview/application-find.html
@@ -62,7 +62,7 @@
     <div class="grid-row sorting">
         <div class="column-one">
             <span class="heading-xlarge no-margin" th:text="${model.pagination.totalCount}">20</span>
-            <span class="heading-small">applications</span>
+            <span class="heading-small">applications in competition</span>
         </div>
     </div>
 
