--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview-resend-invites.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview-resend-invites.html
@@ -42,13 +42,13 @@
 
                 <div class="form-group extra-margin">
                     <label class="form-label-bold" for="message">Additional text</label>
-                    <textarea
-                        id="message" rows="8" class="form-control width-full"
-                        th:field="*{content}">
-                    </textarea>
+                    <div class="textarea-wrapped">
+                <textarea id="message" rows="8" data-editor="html" class="width-full" th:field="*{content}">
+                </textarea>
+                    </div>
                 </div>
 
-                <p class="form-hint">
+                <p class="form-hint extra-margin">
                     Yours sincerely,
                 </p>
 
