--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-competition-invite.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-competition-invite.html
@@ -30,7 +30,7 @@
             <section>
                 <h2 class="heading-medium" th:text="|Competition details: ${model.competitionName}|">Competition details: Technology inspired</h2>
 
-                <p><a th:href="@{~/competition/{cid}/overview(cid=${model.competitionId})}" target="_blank" rel="external noopener noreferrer">See competition brief</a></p>
+                <p><a th:href="@{~/competition/{cid}/overview(cid=${model.competitionId})}" target="_blank" rel="external noopener noreferrer">See competition brief (opens in a new window)</a></p>
 
                 <h3 class="heading-small">You should reject this invitation if:</h3>
                 <ul class="list list-bullet">
