IFS-3201 addressing review comments.

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview/assessor-find.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview/assessor-find.html
@@ -69,7 +69,7 @@
     </ul>
 
     <div class="grid-row">
-        <div class="column-three-quarters">w
+        <div class="column-three-quarters">
             <h2 class="heading-small no-margin-top">Find registered assessors to invite.</h2>
             <br>
         </div>
