--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview-overview.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview-overview.html
@@ -85,7 +85,7 @@
             </div>
 
             <form method="POST"
-                  th:action="@{/interview/competition/{competitionId}/assessors/invite/reviewResend(competitionId=${model.competitionId})}"
+                  th:action="@{/assessment/interview/competition/{competitionId}/assessors/invite/reviewResend(competitionId=${model.competitionId})}"
                   th:object="${interviewOverviewSelectionForm}"
                   data-multipage-select=""
                   th:attr="data-total-checkboxes=${model.pagination.totalCount}">
