--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/service-layout.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/service-layout.html
@@ -4,7 +4,7 @@
 <!-- ===========================Place: service <body> end =========================== -->
 
 <th:block th:fragment="body-end">
-    <script th:src="'/management'+${@mvcResourceUrlProvider.getForLookupPath('/js/dest/comp-management.min.js')}" type="text/javascript"></script>
+    <script th:src="@{${@mvcResourceUrlProvider.getForLookupPath('/js/dest/comp-management.min.js')}}" type="text/javascript"></script>
 </th:block>
 
 </html>
