--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/fragments/layout.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/fragments/layout.html
@@ -15,11 +15,11 @@
       (function(){if(navigator.userAgent.match(/IEMobile\/10\.0/)){var d=document,c="appendChild",a=d.createElement("style");a[c](d.createTextNode("@-ms-viewport{width:auto!important}"));d.getElementsByTagName("head")[0][c](a);}})();
     </script>
 
-    <!--[if gt IE 9]><!--><link href="/css/screen.css" th:href="${@mvcResourceUrlProvider.getForLookupPath('/css/screen.css')}" media="screen,print" rel="stylesheet" type="text/css" /><!--<![endif]-->
-    <!--[if IE 7]><link href="/css/ie7.css" media="screen,print" rel="stylesheet" type="text/css" /><![endif]-->
-    <!--[if IE 8]><link href="/css/ie8.css" media="screen,print" rel="stylesheet" type="text/css" /><![endif]-->
-    <!--[if IE 9]><link href="/css/ie9.css" media="screen,print" rel="stylesheet" type="text/css" /><![endif]-->
-    <!--[if IE 8]><link href="/css/fonts-ie8.css" media="all" rel="stylesheet" /><![endif]-->
+    <!--[if gt IE 9]><!--><link href="/css/screen.css" th:href="@{${@mvcResourceUrlProvider.getForLookupPath('/css/screen.css')}}" media="screen,print" rel="stylesheet" type="text/css" /><!--<![endif]-->
+    <!--[if IE 7]><link href="/css/ie7.css" th:href="@{${@mvcResourceUrlProvider.getForLookupPath('/css/ie7.css')}}" media="screen,print" rel="stylesheet" type="text/css" /><![endif]-->
+    <!--[if IE 8]><link href="/css/ie8.css" th:href="@{${@mvcResourceUrlProvider.getForLookupPath('/css/ie8.css')}}" media="screen,print" rel="stylesheet" type="text/css" /><![endif]-->
+    <!--[if IE 9]><link href="/css/ie9.css" th:href="@{${@mvcResourceUrlProvider.getForLookupPath('/css/ie9.css')}}" media="screen,print" rel="stylesheet" type="text/css" /><![endif]-->
+    <!--[if IE 8]><link href="/css/fonts-ie8.css" th:href="@{${@mvcResourceUrlProvider.getForLookupPath('/css/fonts-ie8.css')}}" media="all" rel="stylesheet" /><![endif]-->
 
     <!--[if gte IE 9]><!-->
         <script type="text/javascript">
@@ -30,10 +30,10 @@
     <!--<![endif]-->
 
     <!--[if lt IE 9]>
-      <script src="/js/vendor/govuk/ie.js" type="text/javascript"></script>
+        <script src="/js/vendor/govuk/ie.js" th:src="@{${@mvcResourceUrlProvider.getForLookupPath('/js/vendor/govuk/ie.js')}}" type="text/javascript"></script>
     <![endif]-->
 
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/images/favicon.ico" th:href="${@mvcResourceUrlProvider.getForLookupPath('/images/favicon.ico')}" type="image/x-icon" />
 
     <!-- Size for iPad and iPad mini (high resolution) -->
     <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/images/apple-touch-icon-152x152.png" th:href="${@mvcResourceUrlProvider.getForLookupPath('/images/apple-touch-icon-152x152.png')}"/>
@@ -81,10 +81,8 @@
 <!-- ===========================Place: <body> end =========================== -->
 
 <th:block th:fragment="body-end">
-
-    <script src="/js/dest/vendor.min.js" th:src="${@mvcResourceUrlProvider.getForLookupPath('/js/dest/vendor.min.js')}" type="text/javascript"></script>
-    <script src="/js/dest/ifs.min.js" th:src="${@mvcResourceUrlProvider.getForLookupPath('/js/dest/ifs.min.js')}" type="text/javascript"></script>
-
+    <script src="/js/dest/vendor.min.js" th:src="@{${@mvcResourceUrlProvider.getForLookupPath('/js/dest/vendor.min.js')}}" type="text/javascript"></script>
+    <script src="/js/dest/ifs.min.js" th:src="@{${@mvcResourceUrlProvider.getForLookupPath('/js/dest/ifs.min.js')}}" type="text/javascript"></script>
 </th:block>
 
 <!-- ===========================Place: main <header>  =========================== -->
