IFS-2313-Edit-Project-Duration
Validation Error changes.

Change-Id: I1c88ce076616d0d44d57c27c47b780ece0a0c26e

--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/edit-duration.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/edit-duration.html
@@ -23,13 +23,16 @@
     <dd th:text="${#temporals.format(model.project.targetStartDate, 'd MMM yyyy')}"></dd>
   </dl>
   <form th:action="@{/competition/{competitionId}/project/{projectId}/update-duration(competitionId=${model.competitionId},projectId=${model.project.id})}"
+        th:object="${form}"
         method="post"
         novalidate="novalidate">
-    <div class="form-group">
+    <div class="form-group" th:classappend="${#fields.hasErrors('durationInMonths')} ? 'form-group-error'">
       <label for="durationInMonths">
         <span class="form-label-bold">Duration</span>
       </label>
-
+        <th:block th:if="${#fields.hasErrors('durationInMonths')}">
+          <span class="error-message" th:each="err : ${#fields.errors('durationInMonths')}" th:text="${err}" />
+        </th:block>
         <input name="durationInMonths"
                id="durationInMonths"
                type="text"
