IFS-3201 updating spacing in html.

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview/application-invite.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview/application-invite.html
@@ -43,8 +43,7 @@
                 <dd th:text="${model.innovationArea}">Agriculture and food</dd>
             </dl>
 
-            <div><br></div>
-            <ul class="inline-nav">
+            <ul class="inline-nav extra-margin">
                 <li class="not-selected">
                     <a th:href="@{/assessment/interview/competition/{competitionId}/applications/find(competitionId=${model.competitionId})}">Find</a>
                 </li>
