--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/edit-duration.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/edit-duration.html
@@ -29,19 +29,20 @@
     <div class="form-group" th:classappend="${#fields.hasErrors('durationInMonths')} ? 'form-group-error'">
       <label for="durationInMonths">
         <span class="form-label-bold">Duration</span>
-      </label>
         <th:block th:if="${#fields.hasErrors('durationInMonths')}">
-          <span class="error-message" th:each="err : ${#fields.errors('durationInMonths')}" th:text="${err}" />
+            <span class="error-message" th:each="err : ${#fields.errors('durationInMonths')}" th:text="${err}"></span>
         </th:block>
+      </label>
         <input name="durationInMonths"
                id="durationInMonths"
                type="text"
                class="form-control width-small"
                required="required"
-               pattern="[0-9]"
-               maxlength="6"
-               data-prevent-input-regex="[^0-9]" />
-
+               pattern="^[0-9]*$"
+               maxlength="2"
+               data-prevent-input-regex="[^0-9]"
+               th:errorclass="form-control-error"
+               th:field="*{durationInMonths}"/>
       <span>months</span>
     </div>
     <button type="submit" class="button">Save and return to finances</button>
