--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/edit-duration.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/edit-duration.html
@@ -14,10 +14,9 @@
 
     <div th:if="${#fields.hasErrors('${form.*}')}" class="error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
         <h2 class="heading-medium error-summary-heading" id="error-summary-heading">We are unable to save your project details.</h2>
-        <ul class="error-summary-list">
-            <li>
-                <a href="#durationInMonths">Please check your project duration.</a>
-            </li>
+        <th:block th:insert="fragments/elements :: error-summary-list(form)" />
+        <ul class="list-bullet" th:if="${#fields.hasErrors('${form}')}">
+            <li>please check your project duration</li>
         </ul>
     </div>
 
@@ -35,24 +34,24 @@
         th:object="${form}"
         method="post"
         novalidate="novalidate">
-    <div class="form-group" th:classappend="${#fields.hasErrors('durationInMonths')} ? 'form-group-error'">
+    <div class="form-group" th:classappend="${#fields.hasErrors('durationInMonths')} ? 'form-group-error'" >
       <label for="durationInMonths">
         <span class="form-label-bold">Duration</span>
         <th:block th:if="${#fields.hasErrors('durationInMonths')}">
               <span class="error-message" th:each="err : ${#fields.errors('durationInMonths')}" th:text="${err}"></span>
         </th:block>
       </label>
-        <input name="durationInMonths"
-        id="durationInMonths"
-        th:attr="data-required-errormessage=#{validation.field.must.not.be.blank},data-pattern-errormessage=#{validation.field.non.decimal.format}"
-        type="text"
-        class="form-control width-small"
-        required="required"
-        pattern="^[0-9]*$"
-        maxlength="2"
-        data-prevent-input-regex="[^0-9]"
-        th:errorclass="form-control-error"
-        th:field="*{durationInMonths}" />
+      <input name="durationInMonths"
+             id="durationInMonths"
+             th:attr="data-required-errormessage=#{validation.field.must.not.be.blank},data-pattern-errormessage=#{validation.field.non.decimal.format}"
+             type="text"
+             class="form-control width-small"
+             required="required"
+             pattern="^[0-9]*$"
+             maxlength="2"
+             data-prevent-input-regex="[^0-9]"
+             th:errorclass="form-control-error"
+             th:field="*{durationInMonths}" />
       <span>months</span>
     </div>
     <button type="submit" class="button">Save and return to finances</button>
