IFS-2940 Character encoding for % symbol based on PR review

--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/finance.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/finance.html
@@ -528,7 +528,7 @@
                             <tr>
                                 <th scope="row">Custom administration support costs</th>
                                 <td class="alignright">
-                                    Rate calculated: <th:block th:text="${overheadCosts?.rate+'%'}">28%</th:block>
+                                    Rate calculated: <th:block th:text="${overheadCosts?.rate+'&percnt;'}">28&percnt;</th:block>
                                 </td>
                             </tr>
                             </tbody>
@@ -926,7 +926,7 @@
                         <th scope="col" id="cap-usage-depreciation-period">Depreciation period  (months)</th>
                         <th scope="col" class="numeric" id="cap-usage-net-present-value">Net present value (&pound;)</th>
                         <th scope="col" class="numeric" id="cap-usage-residual-value">Residual value (&pound;)</th>
-                        <th scope="col" class="numeric" id="cap-usage-utilisation">Utilisation (%)</th>
+                        <th scope="col" class="numeric" id="cap-usage-utilisation">Utilisation (&percnt;)</th>
                         <th scope="col" class="numeric" id="cap-usage-cost">Net cost</th>
                     </tr>
                     </thead>
