--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/applicant-dashboard.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/applicant-dashboard.html
@@ -108,7 +108,7 @@
                     <h2 class="heading-medium">Previous applications</h2>
                     <ul>
                         <li th:each="app : ${model.applicationsFinished}"
-                            th:class="${model.applicationIsApproved(app.id)} ? 'positive'">
+                            th:class="${model.applicationIsApprovedAndProjectIsNotWithdrawn(app.id)} ? 'positive'">
                             <div class="task">
                                 <h3 class="heading-small">
                                     <a th:href="@{/application/{id}/summary(id=${app.getId()})}" th:text="${app.name}">placeholder</a>
@@ -120,9 +120,10 @@
                             </div>
                             <div class="status">
                                 <p th:if="${model.applicationIsRejected(app.id)}" class="status-msg msg-progress">Unsuccessful</p>
-                                <p th:if="${model.applicationIsApproved(app.id)}" class="status-msg msg-progress">Successful</p>
+                                <p th:if="${model.applicationIsApprovedAndProjectIsNotWithdrawn(app.id)}" class="status-msg msg-progress">Successful</p>
                                 <p th:if="${model.applicationIsCreatedOrOpen(app.id)}" class="status-msg msg-progress not-submitted">Not submitted</p>
                                 <p th:if="${model.applicationIsInformedIneligible(app.id)}" class="status-msg msg-progress">Ineligible</p>
+                                <p th:if="${model.projectIsWithdrawn(app.id)}" class="status-msg msg-progress">Project withdrawn</p>
                             </div>
                         </li>
                     </ul>
