IFS-2920-Proj-Location-Per-Partner
Updated the thymeleaf comments so that they dont appear in the html.

Change-Id: I73b5e5efa66082ef8dbfe46dce96429e74e24231

--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/detail.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/detail.html
@@ -55,7 +55,7 @@
         </tbody>
     </table>
 
-    <!--If project setup location is enabled -->
+    <!--/* If project setup location is enabled */-->
     <th:block th:if="${model.locationPerPartnerRequired}">
         <h2 class="heading-medium">Partner details</h2>
 
