--- a/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/detail.html
+++ b/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/detail.html
@@ -75,7 +75,7 @@
         </tbody>
     </table>
 
-    <!--If project setup location is enabled -->
+    <!--/* If project setup location is enabled */-->
     <th:block th:if="${model.competition.locationPerPartner}">
         <h2 class="heading-medium">Partner details</h2>
         <p>Each partner must provide a finance contact and a project location. We will contact the assigned person with any finance queries and assign the Monitoring Officer based on the location.</p>
