--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/applicant-dashboard.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/applicant-dashboard.html
@@ -52,7 +52,7 @@
                         <li class="status-2-col" th:each="app : ${model.applicationsInProgress}" th:classappend="${model.applicationIsAssignedToMe(app.id) ? 'assigned-to-me' : '' }">
                             <th:block th:unless="${model.applicationIsSubmitted(app.id)}">
                                 <div class="task">
-                                    <h3 class="heading-small" th:with="teamUrl=@{/application/{id}/team(id=${app.getId()})}, formUrl=@{/application/{id}(id=${app.getId()})}, noTitle=#{ifs.application.dashboard.no_title}">
+                                    <h3 class="heading-small" th:with="teamUrl=@{/application/{id}/team(id=${app.id})}, formUrl=@{/application/{id}(id=${app.id})}, noTitle=#{ifs.application.dashboard.no_title}">
                                         <a th:href="${model.navigateUserToTeamPage(app.id) ? teamUrl : formUrl}"
                                             th:text="${#strings.isEmpty(app.name) ? noTitle : app.name}"/>
                                     </h3>
@@ -112,7 +112,7 @@
                             th:class="${model.applicationIsApproved(app.id)} ? 'positive'">
                             <div class="task">
                                 <h3 class="heading-small" th:with="noTitle=#{ifs.application.no_title}">
-                                    <a th:href="@{/application/{id}/summary(id=${app.getId()})}"
+                                    <a th:href="@{/application/{id}/summary(id=${app.id})}"
                                        th:text="${#strings.isEmpty(app.name) ? noTitle : app.name}">placeholder</a>
                                 </h3>
                                 <ul class="application-details">
