--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/application-feedback-summary.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/application-feedback-summary.html
@@ -15,7 +15,7 @@
                 <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle='Feedback overview',subTitle=${applicationName},size='heading-xlarge'" />
             </th:block>
 
-            <th:block th:insert="fragments/elements :: competition-status-message (app=${currentApplication}, competition=${currentCompetition}, projectWithdrawn =${projectWithdrawn})" />
+            <th:block th:insert="fragments/elements :: competition-status-message (app=${currentApplication}, competition=${currentCompetition})" />
 
             <h2 class="heading-medium no-margin-bottom">Application details</h2>
             <p class="form-hint">Assessors do not provide scores on these sections of the application.</p>
