IFS-1727 added a class to right align text

--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/project/financecheck/eligibility.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/project/financecheck/eligibility.html
@@ -34,7 +34,7 @@
             <thead>
             <tr>
                 <th scope="col">Project duration</th>
-                <th scope="col">Total costs</th>
+                <th scope="col" class="numeric">Total costs</th>
                 <th scope="col" class="numeric">% Grant</th>
                 <th scope="col" class="numeric">Funding sought (&pound;)</th>
                 <th:block th:unless="${summaryModel.usingJesFinances}">
